--- a/css-folder/nav.css
+++ b/css-folder/nav.css
@@ -59,7 +59,12 @@ nav a{
     width:100%;
 }
 
-@media(max-width:700px){
+#nav-menu,#nav-cross{ 
+    display:none ;
+    color:white;
+}
+
+@media(max-width:750px){
     .text-box h1{
         font-size: 20px;
     }
@@ -71,7 +76,7 @@ nav a{
         background:#ffe253;
         height:100vh;
         width:200px;
-        right:0;
+        right:-200px;
         top:0;
         text-align:left;
         z-index:2;
@@ -86,6 +91,17 @@ nav a{
     .cta h1{
         font-size:24px;
     }
+    #nav-menu,#nav-cross{
+    
+        margin: 10px;
+        display:block;
+        color:white; 
+        cursor:pointer;   
+    }
+    .nav-link ul{
+        padding:30px;
+        font-size:25px;
+    }
 }
 
 
@@ -94,7 +110,7 @@ nav a{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #2E8B57;
+    background-color: #deba05;
     color: #fff;
     padding: 10px;
     flex-direction: row;
