--- a/css-folder/login.css
+++ b/css-folder/login.css
@@ -113,6 +113,7 @@ body {
     border-radius: 90px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
+    transition: 3s;
 }
 
 #signup .shift{
