--- a/css-folder/login.css
+++ b/css-folder/login.css
@@ -10,16 +10,19 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #ceffc7;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.5),
+            rgba(4, 9, 30, 0.7)), url(/images/back1.png);
 }
 
 #signup {
     position: relative;
     height: 550px;
     width: 850px;
-    background: #fff;
+    background: white;
     border-radius: 30px;
-    box-shadow: 0, 0, 30px, rgba(0, 0, 0, 0.2);
+    /* border: 1px solid black;
+    border-color: black; */
+    box-shadow: 0px, 2px, 10px, rgb(0, 0, 0);
 }
 
 #signup .login {
@@ -73,9 +76,9 @@ body {
     text-decoration: none;
 }
 
-#signup .login button {
+#login_btn {
     padding: 7px 40px;
-    width: 330px;
+    width: 350px;
     border-radius: 3px;
     font-size: 19px;
     font-weight: 500;
@@ -85,7 +88,9 @@ body {
     margin: 10px 0;
     cursor: pointer;
 }
-
+#login_btn:hover{
+    box-shadow: 1px 2px 5px rgba(4, 9, 0, 0.5);
+}
 #signup .login p {
     margin-bottom: 10px;
     font-size: 18px;
@@ -97,6 +102,7 @@ body {
 
 #signup .toggle {
     display: none !important;
+    transition: 1s;
 }
 
 #signup .register {
@@ -104,27 +110,45 @@ body {
     flex-direction: column;
     position: absolute;
     width: 50%;
-    left: 0;
+    left: 0px;
     align-items: center;
     text-align: center;
     height: 100%;
     justify-content: center;
-    background-color: #3bcaf5;
+    background-color: #3bf5a4;
     border-radius: 90px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
-    transition: 3s;
+    transition: 1s;
 }
 
-#signup .shift{
-    left: auto;
-    right: 0 !important;
-        border-radius: 90px;
+#signup .register2 {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 50%;
+    right: -900px;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    justify-content: center;
+    background-color: #3bf5a4;
+    border-radius: 90px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
+    transition: 0.6s;
 }
 
-#signup .register h2 {
+#signup .shift1 {
+    left: -900px !important;
+}
+
+#signup .shift2 {
+    right: 0 !important;
+}
+
+#signup .register h2,
+#signup .register2 h2 {
     font-size: 40px;
     margin: 8px 0;
 }
@@ -133,13 +157,14 @@ body {
     font-size: 20px;
 }
 
-#signup .register button {
+#signup .register button,
+#signup .register2 button {
     padding: 5px 40px;
     margin: 9px 0;
     font-size: 18px;
     border-radius: 5px;
-    border: none;
+    border: 1px solid black;
     cursor: pointer;
     color: #fff;
-    background-color: rgb(102, 238, 238);
+    background-color: transparent;
 }
