--- a/css-folder/login.css
+++ b/css-folder/login.css
@@ -71,6 +71,10 @@ body {
     margin-top: 27px;
     transform: translateY(-50%);
 }
+#login_form h4{
+    color: #f77d4d;
+    margin: 18px 0;
+}
 
 #signup .login a {
     text-decoration: none;
@@ -87,7 +91,8 @@ body {
     margin: 10px 0;
     cursor: pointer;
 }
-#login_btn {
+#login_btn,
+#register_button {
     padding: 7px 40px;
     width: 350px;
     border-radius: 3px;
@@ -138,10 +143,10 @@ body {
     flex-direction: column;
     position: absolute;
     width: 50%;
-    right: -900px;
+    right: -100%;
     align-items: center;
     text-align: center;
-    height: 100%;
+    height: 550px;
     justify-content: center;
     background-color: #3bf5a4;
     border-radius: 90px;
@@ -151,7 +156,7 @@ body {
 }
 
 #signup .shift1 {
-    left: -900px !important;
+    left: -100% !important;
 }
 
 #signup .shift2 {
