--- a/css-folder/login.css
+++ b/css-folder/login.css
@@ -10,8 +10,9 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    max-width: 100vw;
     background-image: linear-gradient(rgba(4, 9, 30, 0.5),
-            rgba(4, 9, 30, 0.7)), url(/images/back1.png);
+    rgba(4, 9, 30, 0.7)), url(/images/back1.png);
 }
 
 #signup {
@@ -139,7 +140,7 @@ body {
 }
 
 #signup .register2 {
-    display: flex;
+    display: none;
     flex-direction: column;
     position: absolute;
     width: 50%;
@@ -160,7 +161,11 @@ body {
 }
 
 #signup .shift2 {
-    right: 0 !important;
+    right: 0;
+}
+
+#signup .shift3{
+    display: flex;
 }
 
 #signup .register h2,
