--- a/css-folder/login.css
+++ b/css-folder/login.css
@@ -12,7 +12,7 @@ body {
     min-height: 100vh;
     max-width: 100vw;
     background-image: linear-gradient(rgba(4, 9, 30, 0.5),
-    rgba(4, 9, 30, 0.7)), url(/images/back1.png);
+            rgba(4, 9, 30, 0.7)), url(/images/back1.png);
 }
 
 #signup {
@@ -72,7 +72,8 @@ body {
     margin-top: 27px;
     transform: translateY(-50%);
 }
-#login_form h4{
+
+#login_form h4 {
     color: #f77d4d;
     margin: 18px 0;
 }
@@ -80,8 +81,9 @@ body {
 #signup .login a {
     text-decoration: none;
 }
-#signup .login button{
-        padding: 7px 40px;
+
+#signup .login button {
+    padding: 7px 40px;
     width: 350px;
     border-radius: 3px;
     font-size: 19px;
@@ -92,6 +94,7 @@ body {
     margin: 10px 0;
     cursor: pointer;
 }
+
 #login_btn,
 #register_button {
     padding: 7px 40px;
@@ -105,9 +108,11 @@ body {
     margin: 10px 0;
     cursor: pointer;
 }
-#login_btn:hover{
+
+#login_btn:hover {
     box-shadow: 1px 2px 5px rgba(4, 9, 0, 0.5);
 }
+
 #signup .login p {
     margin-bottom: 10px;
     font-size: 18px;
@@ -164,7 +169,7 @@ body {
     right: 0;
 }
 
-#signup .shift3{
+#signup .shift3 {
     display: flex;
 }
 
@@ -188,4 +193,66 @@ body {
     cursor: pointer;
     color: #fff;
     background-color: transparent;
+}
+
+@media(max-width: 499px) {
+    #signup {
+    height: 530px;
+    width: 83vw;
+    border-radius: 19px;
+}
+    #signup .register {
+        width: 100%;
+        top: 0;
+        height: 38%;
+        border-radius: 30px;
+        border-top-right-radius: 0px;
+        border-top-left-radius: 0px;
+        transition: 1s;
+    }
+
+    #signup .register2 {
+        width: 100%;
+        right: -100%;
+        bottom: 0;
+        height: 35%;
+        border-radius: 30px;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+        transition: 0.6s;
+    }
+    #signup .shift1 {
+    left: -900px !important;
+}
+
+    #signup .shift2 {
+        right: 0;
+        bottom: 0;
+    }
+
+    #signup .login {
+        width: 80%;
+        right: auto;
+        align-items: center;
+        text-align: center;
+        bottom: 0;
+        height: 60%;
+        justify-self: center;
+    }
+
+    #signup .reg_login {
+        top: 0;
+        left: auto;
+    }
+    #signup .login input {
+    width: 75vw;
+}
+#login_btn, #register_button {
+    padding: 7px 40px;
+    width: 73vw;
+
+}
+#signup .login span i {
+    right: 0px;
+}
 }
