--- a/css-folder/login.css
+++ b/css-folder/login.css
@@ -18,7 +18,7 @@ body {
 #signup {
     position: relative;
     height: 550px;
-    width: 850px;
+    width: 56vw;
     background: white;
     border-radius: 30px;
     /* border: 1px solid black;
@@ -50,7 +50,8 @@ body {
     font-size: 32px;
 }
 
-#signup .login input {
+#signup .login input,
+#state {
     width: 350px;
     margin: 10px 2px;
     font-size: 18px;
@@ -60,7 +61,9 @@ body {
 
 }
 
-#signup .login input::placeholder {
+#signup .login input::placeholder,
+#state option,
+#state {
     color: #464646;
     font-weight: 400;
     font-size: 18px;
@@ -196,34 +199,45 @@ body {
 }
 
 @media(max-width: 499px) {
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: 100vw;
+    }
+
     #signup {
-    height: 530px;
-    width: 83vw;
-    border-radius: 19px;
-}
+        height: 650px;
+        width: 89vw;
+        border-radius: 19px;
+        margin-bottom: 80px;
+    }
+
     #signup .register {
         width: 100%;
         top: 0;
         height: 38%;
         border-radius: 30px;
-        border-top-right-radius: 0px;
-        border-top-left-radius: 0px;
+        border-top-right-radius: 19px;
+        border-top-left-radius: 19px;
         transition: 1s;
     }
 
     #signup .register2 {
         width: 100%;
-        right: -100%;
-        bottom: 0;
+        bottom: -100%;
         height: 35%;
         border-radius: 30px;
-        border-bottom-right-radius: 0px;
-        border-bottom-left-radius: 0px;
-        transition: 0.6s;
+        border-bottom-right-radius: 19px;
+        border-bottom-left-radius: 19px;
+        transition: 1s;
     }
+
     #signup .shift1 {
-    left: -900px !important;
-}
+        left: 20px;
+        top: -900px !important;
+    }
 
     #signup .shift2 {
         right: 0;
@@ -244,15 +258,30 @@ body {
         top: 0;
         left: auto;
     }
-    #signup .login input {
-    width: 75vw;
-}
-#login_btn, #register_button {
-    padding: 7px 40px;
-    width: 73vw;
 
+    #signup .login h2 {
+    margin:  0;
+    font-size: 32px;
 }
-#signup .login span i {
-    right: 0px;
-}
+
+    #signup .login input,
+    #state {
+        width: 79vw;
+        margin: 6px 2px;
+    }
+
+    #login_btn,
+    #register_button {
+        padding: 7px 40px;
+        width: 79vw;
+
+    }
+
+    #signup .login span i {
+        right: 0px;
+        margin-top: 23px;
+    }
+    #login_form h2{
+        padding-bottom: 25px;
+    }
 }
