--- a/css-folder/login.css
+++ b/css-folder/login.css
@@ -203,21 +203,21 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: auto;
+        height: 100vh;
         width: 100vw;
     }
 
     #signup {
-        height: 650px;
-        width: 89vw;
+        height: 100vh;
+        width: 100vw;
         border-radius: 19px;
-        margin-bottom: 80px;
+        margin-bottom: 0;
     }
 
     #signup .register {
         width: 100%;
         top: 0;
-        height: 38%;
+        height: 40%;
         border-radius: 30px;
         border-top-right-radius: 19px;
         border-top-left-radius: 19px;
@@ -227,7 +227,7 @@ body {
     #signup .register2 {
         width: 100%;
         bottom: -100%;
-        height: 35%;
+        height: 40%;
         border-radius: 30px;
         border-bottom-right-radius: 19px;
         border-bottom-left-radius: 19px;
@@ -249,7 +249,7 @@ body {
         right: auto;
         align-items: center;
         text-align: center;
-        bottom: 0;
+        bottom: 50px;
         height: 60%;
         justify-self: center;
     }
@@ -260,20 +260,20 @@ body {
     }
 
     #signup .login h2 {
-    margin:  0;
-    font-size: 32px;
-}
+        margin: 25px 0;
+        font-size: 32px;
+    }
 
     #signup .login input,
     #state {
-        width: 79vw;
+        width: 88vw;
         margin: 6px 2px;
     }
 
     #login_btn,
     #register_button {
         padding: 7px 40px;
-        width: 79vw;
+        width: 88vw;
 
     }
 
@@ -281,7 +281,6 @@ body {
         right: 0px;
         margin-top: 23px;
     }
-    #login_form h2{
-        padding-bottom: 25px;
-    }
+
+
 }
